# rust-sdk

./: .env.example  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  integration.yml
src/: client.rs  error.rs  lib.rs  transport.rs  version.rs
src/models/: account.rs  acl.rs  authentication.rs  common.rs  e911.rs  gateways.rs  inumbering.rs  lookups.rs  messaging.rs  mod.rs  numbers.rs  support.rs
src/resources/: account.rs  acl.rs  authentication.rs  e911.rs  gateways.rs  inumbering.rs  lookups.rs  messaging.rs  mod.rs  numbers.rs  support.rs
tests/: account.rs  acl.rs  authentication.rs  e911.rs  gateways.rs  integration.rs  inumbering.rs  lookups.rs  messaging.rs  numbers.rs  support.rs  transport.rs  unit.rs
tests/common/: mod.rs
